--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,5 +1,5 @@
 # Env
-spring.profiles.active=dev
+#spring.profiles.active=dev
 
 # datasource
 spring.datasource.driverClassName=org.h2.Driver
@@ -30,5 +30,6 @@ info.app.version=@project.version@
 info.app.encoding=@project.build.sourceEncoding@
 info.app.java.version=@java.version@
 
-# Spring boot admin server
-spring.boot.admin.client.url=http://localhost:8081
+# Heroku Port
+server.port=${PORT}
+
